@@ -144,6 +144,7 @@ Bug fixes:
 - PR#5976: crash after recovering from two stack overflows (ocamlopt on MacOS X)
 - PR#5981: Incompatibility check assumes abstracted types are injective
 - PR#5985: Unexpected interaction between variance and GADTs
+- PR#5988: missing from the documentation: -impl is a valid flag for ocamlopt
 - PR#5989: Assumed inequalities involving private rows
 - PR#5993: Variance of private type abbreviations not checked for modules
 - PR#5997: Non-compatibility assumed for concrete types with same constructor
